# flust

./: Cargo.toml  README.md  flust  install.sh
src/: main.rs
src/utils/: mod.rs  utils.rs
