[package]
name = "flust"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
argparse = "0.2.2"
term_size = "1.0.0-beta1"
jwalk = "0.6.0"
unix_mode = "0.1.3"
users = "0.11.0"
chrono = "0.4.19"
path-absolutize = "3.0.12"
rayon = "1.5.1"
